--- a/M2-Maths and Stats/D2/Quiz_2_Lin_Alg.ipynb
+++ b/M2-Maths and Stats/D2/Quiz_2_Lin_Alg.ipynb
@@ -29,29 +29,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-1-2e7a2fba7dc3>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-2e7a2fba7dc3>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    def complete_plane(#inputs):\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
    "source": [
-    "def plane(a,b,c):\n",
+    "import numpy as np\n",
+    "a = np.array([[1], [3], [3]])\n",
+    "b = np.array([[2], [2], [2]])\n",
+    "c = np.array([[8], [8], [8]])\n",
+    "\n",
+    "def define_plane(x, y):\n",
+    "    if x[0,0] >= y[0, 0]:\n",
+    "        d = np.divide(x, y)\n",
+    "        print(d)\n",
+    "        # for i in d: \n",
+    "        #     if i % 1 != 0:\n",
+    "        #         return False\n",
+    "        #         print('False')\n",
+    "        #         break\n",
+    "        #     return True\n",
+    "        #     print('Tr')\n",
+    "\n",
+    "define_plane(a, b)\n",
+    "    # if x[0,0] < y[0,0]: \n",
+    "    #     d = np. divide(y, x)\n",
+    "    #     for i in d: \n",
+    "    #         if i%1 != 0:\n",
+    "    #             return False\n",
+    "    #             break\n",
+    "    #         else: \n",
+    "    #             continue \n",
+    "            \n",
+    "\n",
+    "# d = np. divide(a, b)\n",
+    "# for i in d:\n",
+    "#     if i%1 == 0:\n",
+    "#         print('yes')\n",
+    "#     else:\n",
+    "#         print('no')\n",
+    "\n",
+    "#def plane(a,b,c):\n",
+    "    \n",
     "    #returns false if the vectors don't define a plane and returns which are those vectors if true\n",
-    "    pass\n",
+    "    \n",
     "# Harder exercise\n",
     "\n",
-    "def complete_plane(#inputs):\n",
-    "    pass\n",
+    "#def complete_plane(#inputs):\n",
+    "  \n",
     "#returns the first set of vectors to complete a plane, false otherwise"
-   ]
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 2,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -63,11 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# do you need a function for this? What is the most efficient way to solve it?"
+    "\n"
    ]
   },
   {
@@ -84,15 +119,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Idem. Do you need a function for this? What is the most efficient way to solve it?"
+    "# Idem. Do you need a function for this? What is the most efficient way to solve it?\n",
+    "these are two parralel lines \n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit ('mynewenv': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -104,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.10"
   },
   "varInspector": {
    "cols": {
@@ -134,6 +169,9 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "interpreter": {
+   "hash": "7d6121a23a4048d8a7a11f93f07840b870ae7d038dbb65fbcf822b011c54204d"
   }
  },
  "nbformat": 4,
