--- a/M2-Maths and Stats/D2/Quiz_2_Lin_Alg.ipynb
+++ b/M2-Maths and Stats/D2/Quiz_2_Lin_Alg.ipynb
@@ -39,24 +39,19 @@
     "    if x[0,0] >= y[0, 0]:\n",
     "        d = np.divide(x, y)\n",
     "        print(d)\n",
-    "        # for i in d: \n",
-    "        #     if i % 1 != 0:\n",
-    "        #         return False\n",
-    "        #         print('False')\n",
-    "        #         break\n",
-    "        #     return True\n",
-    "        #     print('Tr')\n",
-    "\n",
-    "define_plane(a, b)\n",
-    "    # if x[0,0] < y[0,0]: \n",
-    "    #     d = np. divide(y, x)\n",
-    "    #     for i in d: \n",
-    "    #         if i%1 != 0:\n",
-    "    #             return False\n",
-    "    #             break\n",
-    "    #         else: \n",
-    "    #             continue \n",
-    "            \n",
+    "        for i in d: \n",
+    "            if i % 1 != 0:\n",
+    "                return False\n",
+    "                print('False')\n",
+    "                break\n",
+    "    if x[0,0] < y[0,0]: \n",
+    "        d = np. divide(y, x)\n",
+    "        print(d)\n",
+    "        for i in d: \n",
+    "            if i%1 != 0:\n",
+    "                return False\n",
+    "                break\n",
+    "define_plane(a,c)         \n",
     "\n",
     "# d = np. divide(a, b)\n",
     "# for i in d:\n",
@@ -77,8 +72,26 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 2,
-   "outputs": []
+   "execution_count": 9,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[8.        ]\n [2.66666667]\n [2.66666667]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ]
   },
   {
    "cell_type": "markdown",
