--- a/M2-Maths and Stats/D2/Quiz_2_Lin_Alg.ipynb
+++ b/M2-Maths and Stats/D2/Quiz_2_Lin_Alg.ipynb
@@ -35,30 +35,23 @@
     "b = np.array([[2], [2], [2]])\n",
     "c = np.array([[8], [8], [8]])\n",
     "\n",
-    "def define_plane(x, y):\n",
+    "def plane(x, y):\n",
     "    if x[0,0] >= y[0, 0]:\n",
     "        d = np.divide(x, y)\n",
-    "        print(d)\n",
     "        for i in d: \n",
     "            if i % 1 != 0:\n",
     "                return False\n",
     "                print('False')\n",
     "                break\n",
+    "        return True\n",
     "    if x[0,0] < y[0,0]: \n",
     "        d = np. divide(y, x)\n",
-    "        print(d)\n",
     "        for i in d: \n",
     "            if i%1 != 0:\n",
     "                return False\n",
     "                break\n",
-    "define_plane(a,c)         \n",
-    "\n",
-    "# d = np. divide(a, b)\n",
-    "# for i in d:\n",
-    "#     if i%1 == 0:\n",
-    "#         print('yes')\n",
-    "#     else:\n",
-    "#         print('no')\n",
+    "        return True\n",
+    "     \n",
     "\n",
     "#def plane(a,b,c):\n",
     "    \n",
@@ -75,17 +68,10 @@
    "execution_count": 9,
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[[8.        ]\n [2.66666667]\n [2.66666667]]\n"
-     ]
-    },
-    {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "metadata": {},
