--- a/M2-Maths and Stats/D2/Quiz_2_Lin_Alg.ipynb
+++ b/M2-Maths and Stats/D2/Quiz_2_Lin_Alg.ipynb
@@ -35,6 +35,42 @@
     "b = np.array([[2], [2], [2]])\n",
     "c = np.array([[8], [8], [8]])\n",
     "\n",
+    "\n",
+    "def plane2(x, y ,z):\n",
+    "    if x[0,0] >= y[0,0]:\n",
+    "        d1 = np.divide(x, y)\n",
+    "        for i in d1:\n",
+    "             if i % 1 != 0:\n",
+    "                return False\n",
+    "                print('False')\n",
+    "                break\n",
+    "    elif x[0, 0] < y[0,0]:\n",
+    "        d1 = np.divide(y, x)\n",
+    "        for i in d1:\n",
+    "             if i % 1 != 0:\n",
+    "                return False\n",
+    "                print('False')\n",
+    "                break\n",
+    "        return True\n",
+    "    elif y[0,0] >= z[0,0]:\n",
+    "        d2 = np.divide(y, z)\n",
+    "        for i in d2:\n",
+    "             if i % 1 != 0:\n",
+    "                return False\n",
+    "                print('False')\n",
+    "                break\n",
+    "        return True\n",
+    "    elif y[0, 0] < z[0,0]:\n",
+    "        d1 = np.divide(z, y)\n",
+    "        for i in d1:\n",
+    "             if i % 1 != 0:\n",
+    "                return False\n",
+    "                print('False')\n",
+    "                break\n",
+    "        return True\n",
+    "    \n",
+    "print(plane2(a, b, c))\n",
+    "\n",
     "def plane(x, y):\n",
     "    if x[0,0] >= y[0, 0]:\n",
     "        d = np.divide(x, y)\n",
@@ -65,17 +101,15 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 9,
+   "execution_count": 14,
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-14-c1f0d4e90061>, line 8)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-14-c1f0d4e90061>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    elif x[0,0] >= y[0,0]:\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ]
   },
@@ -101,7 +135,7 @@
     }
    ],
    "source": [
-    "\n"
+    "no solutions? \n"
    ]
   },
   {
