Creating Gradient Descent and Integrals

--- a/M2-Maths and Stats/D4/Gradient Descent and Integrals.ipynb
+++ b/M2-Maths and Stats/D4/Gradient Descent and Integrals.ipynb
@@ -345,7 +345,7 @@
     "\n",
     "Compare the result computing the area by hand. Does it make sense?\n",
     "\n",
-    "Be careful: defining a constant function, you may end up with a single number instead of an array of the same size of the input. For this, I recommend to put in your function `constant_value*np.ones_like(x)`."
+    "Be careful please: defining a constant function, you may end up with a single number instead of an array of the same size of the input. For this, I recommend to put in your function `constant_value*np.ones_like(x)`."
    ]
   },
   {
